@@ -1,12 +1,10 @@
 package kakao.bootcamp.fullstack.api.repository.post;
 
-import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 import kakao.bootcamp.fullstack.api.domain.post.Post;
 import kakao.bootcamp.fullstack.global.generator.AtomicLongIdGenerator;
 import kakao.bootcamp.fullstack.global.generator.IdGenerator;
@@ -22,7 +20,7 @@ public class InMemoryPostRepository implements PostRepository {
 
     @Override
     public void save(Post post) {
-        if(post.isNew()){
+        if (post.isNew()) {
             Long id = idGenerator.nextId();
             post.assignId(id);
         }
@@ -30,31 +28,18 @@ public class InMemoryPostRepository implements PostRepository {
     }
 
     @Override
-    public Optional<Post> findById(Long id) {
-        return Optional.ofNullable(posts.get(id));
+    public Optional<Post> findActiveById(Long id) {
+        return Optional.ofNullable(posts.get(id))
+                .filter(post -> !post.isDeleted());
     }
 
     @Override
-    public List<Post> findFirstPage(Long size) {
-        return posts.values()
-                .stream()
-                .sorted(Comparator.comparing(Post::getCreatedAt).reversed()
-                        .thenComparing(Comparator.comparingLong(Post::getId).reversed()))
+    public List<Post> findPage(Long cursor, Long size) {
+        return posts.values().stream()
+                .filter(post -> !post.isDeleted())
+                .filter(post -> cursor == null || post.getId() < cursor)
+                .sorted(Comparator.comparingLong(Post::getId).reversed())
                 .limit(size)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<Post> findNextPage(LocalDateTime cursorCreatedAt, Long cursorId, Long size) {
-        return posts.values()
-                .stream()
-                .filter(post ->
-                        post.getCreatedAt().isBefore(cursorCreatedAt) ||
-                                (post.getCreatedAt().isEqual(cursorCreatedAt) && post.getId() < cursorId)
-                )
-                .sorted(Comparator.comparing(Post::getCreatedAt).reversed()
-                        .thenComparing(Comparator.comparingLong(Post::getId).reversed()))
-                .limit(size)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
